--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -22,11 +22,30 @@
     #about-us-section > .row{
         width: 75%;
     }
+
+    /* fourth section - tradition */
+
+    #tradition-section{
+        height: 800px;
+    }
+}
+
+@media (max-width: 1400px){
+    
+    /* fourth section - tradition */
+
+    #tradition-section{
+        height: 800px;
+    }
 }
 
 @media (max-width: 1200px){
 
-    /* navbar */
+    /* fourth section - tradition */
+
+    #tradition-section{
+        height: 900px;
+    }
 }
 
 @media (max-width: 992px){
@@ -52,7 +71,7 @@
     /* fourth section - tradition */
 
     #tradition-section{
-        height: 720px;
+        height: 1000px;
     }
 
     .row-tradition{
@@ -63,6 +82,69 @@
         width: 100%;
         margin-top: 25px;
         margin-bottom: 25px;
+    }
+
+    #seta1{
+        left: -20px;
+        top: 15%;
+    }
+    
+    #seta2{
+        left: -38px;
+        top: 38%;
+    }
+    
+    #seta3{
+        left: -58px;
+        top: 62%;
+    }
+    
+    #seta4{
+        left: -74px;
+        top: 86%;
+    }
+
+    #grid-right-tradition{
+        border-right: 0px;
+    }
+
+    #grid-left-tradition{
+        padding: 30px;
+        border-left: 5px solid #F2D422;
+    }
+
+    #tradition-section h2{
+        font-size: 2em;
+        font-weight: 500;
+    }
+    
+    #tradition-section h3{
+        font-size: 1.5em;
+        font-weight: 500;
+    }
+    
+    #tradition-section p{
+        font-size: 1em;
+        font-weight: 400;
+        color: white;
+    }
+
+    /* fourth section - tradition */
+
+    #grid-right-tradition{
+        border-right: 0px;
+    }
+
+    .box{
+        margin-left: 0px;
+    }
+
+    .top{
+        margin-top: -25px !important;
+    }
+
+    .bottom{
+        margin-bottom: -5px !important;
     }
 
 }
@@ -119,12 +201,75 @@
     .content-2,
     .content-3,
     .content-4{
-    padding: 8px;
-}
+        padding: 8px;
+    }
 
+    /* third section - about us */
+
+    #about-us-section{
+        height: 700px;
+    }
+
+    .img-about-us{
+        margin-bottom: 25px;
+    }
+
+    /* fourth section - tradition */
+
+    #tradition-section{
+        height: 1000px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    /* fifth section - video gallery -- PRIMEIRA PARTE*/
+
+    #youtube-first-section p{
+        width: 100%;
+    }
+
+    #youtube-first-section .container{
+        padding: 20px;
+    }
 }
 
 @media (max-width: 576px){
+
+    /* main Banner */
+    
+    #carousel-section h1{
+        font-size: 4em;
+    }
+        
+    #carousel-section p{
+        font-family: 'Bebas Neue', sans-serif;
+        font-size: 2em;
+    }
+
+    /* second section - about products */
+
+    .img-product,
+    .img-product-right{
+        margin-right: 10px;
+    }
+
+    .content-1,
+    .content-3{
+        border-top: 5px solid #F2D422;
+        width: 80%;
+        border-left: 0px;
+        margin-top: 35px;
+        margin-right: 16px;
+    }
+
+    .content-2,
+    .content-4{
+        border-top: 5px solid rgb(100, 100, 100);
+        width: 80%;
+        border-right: 0px;
+        margin-top: 35px;
+        margin-right: 16px;
+    }
     
     /* navbar */
 
@@ -166,7 +311,58 @@
     /* fourth section - tradition */
 
     #tradition-section{
-        height: 800px;
+        height: 1000px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+}
+
+@media (max-width: 470px){
+
+    /* main Banner */
+    
+    #carousel-section h1{
+        font-size: 3em;
+    }
+    
+    #carousel-section p{
+        font-family: 'Bebas Neue', sans-serif;
+        font-size: 1.4em;
+    }
+
+    /* fourth section - tradition */
+    
+
+    #tradition-section{
+        height: 1180px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+@media (max-width: 470px){
+
+    /* main Banner */
+
+    #carousel-section{
+        height: 550px;
+    }
+    
+    #carousel-section h1{
+        font-size: 3em;
+    }
+    
+    #carousel-section p{
+        font-family: 'Bebas Neue', sans-serif;
+        font-size: 1.4em;
+    }
+
+    /* fourth section - tradition */
+    
+
+    #tradition-section{
+        height: 1180px;
         margin-left: 0px;
         margin-right: 0px;
     }
