--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ a{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(/img/ban.JPG);
+    background-image: url(./img/ban.JPG);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -202,7 +202,7 @@ a{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(/img/tradition-section.JPG);
+    background-image: url(./img/tradition-section.JPG);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -245,7 +245,7 @@ a{
     width: 100%;
     height: 100%;
     border-top: 10px solid rgb(24, 24, 24);
-    background-image: url(/img/youtube-section.JPG);
+    background-image: url(./img/youtube-section.JPG);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -306,7 +306,7 @@ a{
     width: 100%;
     height: 100%;
     border-top: 1px solid rgb(24, 24, 24);
-    background-image: url(/img/gallery-section.JPG);
+    background-image: url(./img/gallery-section.JPG);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
