--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -28,6 +28,28 @@
     #tradition-section{
         height: 800px;
     }
+
+    #gallery-first-section .container{
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    
+    #gallery-first-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid rgb(24, 24, 24);
+        background-image: url('../img/gallery-section.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(90%);
+        filter: brightness(0.3);
+        z-index: -1;
+    }
 }
 
 @media (max-width: 1400px){
@@ -37,6 +59,28 @@
     #tradition-section{
         height: 800px;
     }
+
+    #gallery-first-section .container{
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    
+    #gallery-first-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid rgb(24, 24, 24);
+        background-image: url('../img/gallery-section.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(90%);
+        filter: brightness(0.3);
+        z-index: -1;
+    }
 }
 
 @media (max-width: 1200px){
@@ -45,6 +89,28 @@
 
     #tradition-section{
         height: 900px;
+    }
+
+    #gallery-first-section .container{
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    
+    #gallery-first-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid rgb(24, 24, 24);
+        background-image: url('../img/gallery-section.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(90%);
+        filter: brightness(0.3);
+        z-index: -1;
     }
 }
 
@@ -147,6 +213,28 @@
         margin-bottom: -5px !important;
     }
 
+    #gallery-first-section .container{
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    
+    #gallery-first-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid rgb(24, 24, 24);
+        background-image: url('../img/gallery-section.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(90%);
+        filter: brightness(0.3);
+        z-index: -1;
+    }
+
 }
 
 @media (max-width: 768px) {
@@ -230,6 +318,28 @@
 
     #youtube-first-section .container{
         padding: 20px;
+    }
+
+    #gallery-first-section .container{
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    
+    #gallery-first-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid rgb(24, 24, 24);
+        background-image: url('../img/gallery-section.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(90%);
+        filter: brightness(0.3);
+        z-index: -1;
     }
 }
 
@@ -316,6 +426,28 @@
         margin-right: 0px;
     }
 
+    #gallery-first-section .container{
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    
+    #gallery-first-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid rgb(24, 24, 24);
+        background-image: url('../img/gallery-section.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(90%);
+        filter: brightness(0.3);
+        z-index: -1;
+    }
+
 }
 
 @media (max-width: 470px){
@@ -338,6 +470,28 @@
         height: 1180px;
         margin-left: 0px;
         margin-right: 0px;
+    }
+
+    #gallery-first-section .container{
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    
+    #gallery-first-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid rgb(24, 24, 24);
+        background-image: url('../img/gallery-section.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(90%);
+        filter: brightness(0.3);
+        z-index: -1;
     }
 }
 
@@ -365,5 +519,27 @@
         height: 1180px;
         margin-left: 0px;
         margin-right: 0px;
+    }
+
+    #gallery-first-section .container{
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    
+    #gallery-first-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid rgb(24, 24, 24);
+        background-image: url('../img/gallery-section.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(90%);
+        filter: brightness(0.3);
+        z-index: -1;
     }
 }
