--- a/css/style.css
+++ b/css/style.css
@@ -35,27 +35,26 @@ a{
 
 #navbarTop{
     height: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color: #F2D422;
     transition: all 0.3s ease-in-out;
     margin-top: -15px;
 }
 
 .navbarTop-active{
     margin-top: 0px !important;
-    background-color: #F2D422 !important;
+    background-color: #F2D422;
     height: 40px;
 }
 
 #navbarBottom{
     margin-top: -1px;
-    background-image: linear-gradient(to right, rgb(238, 238, 238), rgb(238, 238, 238));
-    border-bottom: 1px solid rgba(0, 0, 0, 0.432);
+    background-color: rgb(46, 46, 46);
+    border-bottom: 2px solid rgba(219, 219, 219, 0.432);
     height: 120px;
     transition: all 0.1s ease-in-out;
 }
 
 .navbarBottom-active{
-    background-image: none !important;
     background-color: transparent !important;
     box-shadow: rgba(230, 230, 230, 0.24) 0px 1px 5px;
 }
