--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,9 @@ a{
 .nav-link{
     color: white;
     border-radius: 10px;
+    font-size: 1.1em;
+    margin-right: 5px;
+    padding: 10px;
 }
 
 .nav-link:hover{
@@ -77,7 +80,6 @@ a{
     animation: navHover;
     animation-duration: 0.5s; 
     background-color: #f2d322d7;
-    padding: 10px;
 }
 
 .img-logo{
