--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -52,6 +52,7 @@
     .texto-com-linha::before {
         width: 90px; 
     }
+
 }
 
 @media (max-width: 992px){
@@ -65,6 +66,22 @@
 
     .img-logo{
         width: 180px;
+    }
+
+    
+    #navbarTogglerDemo02{
+        margin-top: -34px;
+        background-color: rgb(75, 75, 75);
+        border-left: 3px solid rgba(219, 219, 219, 0.432);
+        border-bottom: 3px solid rgba(219, 219, 219, 0.432);
+        border-right: 3px solid rgba(219, 219, 219, 0.432);
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
+        padding: 20px;
+    }
+
+    .togglerNav{
+        background-color: rgba(0, 0, 0, 0.596) !important;
     }
 
     /* third section - about us */
