--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,105 @@ a{
     padding: 10px;
 }
 
+#politicas{
+    flex-direction: column;
+}
+
+/* clients section */
+
+#bahia{
+    background-image: url(/img/bahia/WhatsApp\ Image\ 2024-01-09\ at\ 7.56.18\ AM.jpeg);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#saobento{
+    background-image: url(/img/saobernardo/WhatsApp\ Image\ 2024-01-10\ at\ 9.43.38\ PM\ \(2\).jpeg);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#clients-section{
+    margin-top: 30px;
+}
+
+#clients-row{
+    display: flex;
+}
+
+.client-date{
+    background-color: white;
+    color: black;
+    font-weight: 500;
+    padding: 5px;
+    position: absolute;
+    top: 12px;
+    left: 10px;
+}
+
+.client-text {
+    background-color: #f2d322d7;
+    color: black;
+    font-weight: 500;
+    padding: 10px;
+    width: 90%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.client{
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 1px 5px;
+    margin-right: 15px;
+    width: 300px;
+    height: 300px;
+}
+
+/* modal */
+
+.modal-container {
+    display: none;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 999999999999999999999999999999999999999999999999999999999999999999999999999;
+}
+
+.modal-content {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    height: auto;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.modal-content img{
+    width: 100%;
+}
+
+.close-btn {
+    position: absolute;
+    top: -10px;
+    right: 0px;
+    font-size: 32px;
+    cursor: pointer;
+}
+
 /* botoes form */
 
 #tagSuccess{
@@ -414,7 +513,7 @@ button:disabled{
 
 .box-content-info{
     position: relative;
-    bottom: -50px;
+    bottom: -10px;
     left: 25px;
 }
 
@@ -448,7 +547,13 @@ button:disabled{
 }
 
 #logo-footer{
+    margin-left: 20px;
     width: 30%;
+}
+
+.diretorgeral{
+    font-weight: 600;
+    font-size: 24px;
 }
 
 /* footer */
@@ -466,3 +571,42 @@ button:disabled{
     padding-top: 12px;
 }
 
+.bandeiras{
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+.bandeiras img{
+    width: 100px;
+}
+
+.sites{
+    margin-top: 10px;
+}
+
+/* links dos clientes */
+
+.img-head{
+    width: 40%;
+    margin-bottom: 20px;
+}
+
+#gallery-section{
+    justify-content: space-around;
+    width: 300px;
+    margin-top: 10px;
+}
+
+#gallery-section img{
+    padding: 10px;
+    width: 320px;
+}
+
+#video-section video{
+    padding: 10px;
+    width: 450px;
+}
+
+.carousel-item{
+    width: 600px;
+}
